# physim

./: .clang-format  .gitignore  .physim-format.yml  CMakeLists.txt  README.md  main.cpp
.github/: codecov.yml  pull_request_template.md
.github/workflows/: ci.yml  clang-format.yml  coverage.yml
cmake/: physimConfig.cmake.in
include/: collision.hpp  energie.hpp  kinematics.hpp  object.h  particles.hpp  units.h  units.hpp
include/physim/: energie.hpp  particles.hpp  physim.hpp  units.hpp
scripts/: format_check.py
src/: add.cpp  collision.cpp  energie.cpp  kinematics.cpp  particles.cpp  units.cpp
srcipts/: format_check.py
tests/: test_collision.cpp  test_kinematic.cpp  test_main.cpp  test_support.h  test_units.cpp
tests/installed/: CMakeLists.txt  main.cpp
